<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/normal_419dp"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp">

        <TextView
            android:id="@+id/dialog_bottom_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quxiao"
            android:textColor="@color/f9999"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_26dp"
            />
        <TextView
            android:id="@+id/dialog_bottom_yes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queding"
            android:textColor="@color/color_ff9557"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/normal_26dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_1dp"
        android:background="@color/color_background"
        />
    <TextView
        android:id="@+id/dialog_nan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nan"
        android:layout_marginTop="@dimen/normal_100dp"
        android:textSize="@dimen/normal_40dp"
        android:textColor="@color/f9999"
        />
    <TextView
        android:id="@+id/dialog_nu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nu"
        android:layout_marginTop="@dimen/normal_30dp"
        android:textSize="@dimen/normal_40dp"
        android:textColor="@color/f9999"
        />
</LinearLayout>