<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_background"
    >
    <cn.dlc.commonlibrary.ui.widget.TitleBar
        android:id="@+id/titleBar"
        style="@style/TitleBarStyle"
        app:titleText="@string/gerenzil"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_30dp"
        android:background="@color/color_background"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_131dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:textColor="@color/f3333"
            android:text="@string/touxiang"
            android:layout_marginLeft="@dimen/normal_30dp"
           android:layout_centerVertical="true"
            />
        
        
        <ImageView
            android:id="@+id/personal_data_jiantou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/normal_10dp"
            android:src="@mipmap/ic_01"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/normal_30dp"
            />
        <ImageView
            android:id="@+id/personal_data_img"
            android:layout_toLeftOf="@id/personal_data_jiantou"
            android:layout_width="@dimen/normal_101dp"
            android:layout_height="@dimen/normal_101dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/logo"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_30dp"
        android:background="@color/color_background"
        />
    <RelativeLayout
        android:id="@+id/personal_data_yingfu_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_131dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:textColor="@color/f3333"
            android:text="@string/yongfuming"
            android:layout_marginLeft="@dimen/normal_30dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/personal_data_yingfu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:textColor="@color/f9999"
            android:text="@string/lixiaolong"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@mipmap/ic_01"
            android:layout_marginRight="@dimen/normal_40dp"
            android:drawablePadding="@dimen/normal_10dp"
            />


     
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_1dp"
        android:background="@color/color_background"
        />
    <RelativeLayout
        android:id="@+id/personal_data_xingbie_rl"
    android:layout_width="match_parent"
    android:layout_height="@dimen/normal_131dp"
    android:background="@color/white"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_28dp"
        android:textColor="@color/f3333"
        android:text="@string/xingbie"
        android:layout_marginLeft="@dimen/normal_30dp"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/personal_data_xingbie_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_28dp"
        android:textColor="@color/f9999"
        android:text="@string/nan"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:drawableRight="@mipmap/ic_01"
        android:layout_marginRight="@dimen/normal_40dp"
        android:drawablePadding="@dimen/normal_10dp"
        />



</RelativeLayout>
    

    
</LinearLayout>