<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <cn.dlc.commonlibrary.ui.widget.status.StatusHolderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/include_search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:paddingLeft="@dimen/normal_24dp"
        android:paddingTop="@dimen/normal_40dp"
        android:text="@string/shangpin"
        android:textColor="@color/color_333"
        android:textSize="@dimen/normal_28sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_goods"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_0dp"
        android:layout_marginLeft="@dimen/normal_24dp"
        android:layout_marginRight="@dimen/normal_24dp"
        android:layout_weight="1"
        android:background="@drawable/shape_white_r10"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/normal_10dp"
        android:paddingTop="@dimen/normal_10dp" />

    <TextView
        android:id="@+id/tv_remainder_count"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_110dp"
        android:gravity="center"
        android:textSize="@dimen/normal_24sp"
        tools:text="@string/fangrushuliang_" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/normal_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_white_grey"
            android:text="@string/jieshufangzhi"
            android:textColor="@color/color_ff9557"
            android:textSize="@dimen/normal_32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/normal_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_button_ffb758_ff9557"
            android:text="@string/lijifangzhi"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_32sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>