<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >


    <cn.dlc.commonlibrary.ui.widget.TitleBar
        android:id="@+id/titleBar"
        style="@style/TitleBarStyle"
        app:titleText="@string/guanyuwomen"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_438dp"
        android:orientation="vertical"
        android:background="@color/color_background"
        >
        <ImageView
            android:id="@+id/img_logo"
            android:layout_marginTop="@dimen/normal_74dp"
            android:layout_width="@dimen/normal_216dp"
            android:layout_height="@dimen/normal_216dp" 
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/copanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/yinrongkeji"
            android:textColor="@color/f3333"
            android:textSize="@dimen/normal_28dp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_101dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:text="@string/dangqqianbanben"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_31dp"
            android:textColor="@color/f3333"
            />
        <TextView
            android:id="@+id/vision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:text="V1.1.0"
            android:layout_centerVertical="true"
            android:textColor="@color/f3333"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/normal_31dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_1dp"
        android:background="@color/color_background"
        />
    <RelativeLayout
        android:id="@+id/setting_update_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_101dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:text="@string/kefudianhua"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal_31dp"
            android:textColor="@color/f3333"
            />
        <TextView
            android:id="@+id/setting_update_numb_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_28dp"
            android:layout_centerVertical="true"
            android:textColor="@color/f3333"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/normal_31dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_0dp"
        android:layout_weight="1"
        android:background="@color/color_background"
        >
        <TextView
            android:layout_above="@+id/aboutus_yinwen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gongsi"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/normal_12dp"
            android:textColor="@color/f9999"
            android:textSize="@dimen/normal_24dp"
            />
        <TextView
            android:id="@+id/aboutus_yinwen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gongsiyinwen"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/normal_31dp"
            android:textColor="@color/f9999"
            android:textSize="@dimen/normal_24dp"
            />
        
    </RelativeLayout>
</LinearLayout>