<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <cn.dlc.commonlibrary.ui.widget.status.StatusHolderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="@dimen/normal_216dp"
        android:layout_height="@dimen/normal_216dp"
        android:layout_marginTop="@dimen/normal_140dp"
        android:background="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color_333"
        android:textSize="@dimen/normal_35sp" />

    <FrameLayout
        android:layout_width="@dimen/normal_600dp"
        android:layout_height="@dimen/normal_90dp"
        android:layout_marginTop="@dimen/normal_150dp"
        android:background="@drawable/shape_fff6e5_r40"
        android:paddingLeft="@dimen/normal_40dp"
        android:paddingRight="@dimen/normal_40dp">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:drawableLeft="@mipmap/phone"
            android:drawablePadding="@dimen/normal_10dp"
            android:hint="@string/qingshurushoujihao"
            android:inputType="number"
            android:maxLength="11"
            android:text="13423492144"
            android:textColorHint="@color/color_f0b059"
            android:textSize="@dimen/normal_28sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="@dimen/normal_600dp"
        android:layout_height="@dimen/normal_90dp"
        android:layout_marginTop="@dimen/normal_40dp"
        android:background="@drawable/shape_fff6e5_r40"
        android:paddingLeft="@dimen/normal_40dp"
        android:paddingRight="@dimen/normal_40dp">

        <EditText
            android:id="@+id/edit_check_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:drawableLeft="@mipmap/lock"
            android:drawablePadding="@dimen/normal_10dp"
            android:hint="@string/qingshuruyanzhengma"
            android:text="9388"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/color_f0b059"
            android:textSize="@dimen/normal_28sp" />

        <View
            android:layout_width="@dimen/normal_1dp"
            android:layout_height="@dimen/normal_30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_350dp"
            android:background="@color/color_f5dbbf" />

        <TextView
            android:id="@+id/tv_get_check_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_380dp"
            android:text="@string/huoquyanzhengma"
            android:textColor="@color/color_ff9557"
            android:textColorHint="@color/color_f0b059"
            android:textSize="@dimen/normal_28sp" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/normal_600dp"
        android:layout_height="@dimen/normal_90dp"
        android:layout_marginTop="@dimen/normal_40dp"
        android:text="@string/denglu" />

</LinearLayout>