<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_background"
    >

    <cn.dlc.commonlibrary.ui.widget.TitleBar
        android:id="@+id/titleBar"
        style="@style/TitleBarStyle"
        app:titleText="@string/yongfuming"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:orientation="horizontal"
        android:background="@color/color_background"
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yongfuming"
            android:textSize="@dimen/normal_32dp"
            android:textColor="@color/f3333"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_29dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="@dimen/normal_300dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_32dp"
            android:textColor="@color/f9999"
            android:hint="@string/qingshuru"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_29dp"
            android:background="@null"
            />
    </LinearLayout>

    <Button
        android:id="@+id/username_bt"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/normal_600dp"
        android:layout_height="@dimen/normal_90dp"
        android:layout_marginTop="@dimen/normal_40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/queding" />
    


</LinearLayout>